[gd_scene load_steps=5 format=3 uid="uid://c7k2r3m4n5p6q"]

[ext_resource type="Script" uid="uid://map_menu_script" path="res://scripts/map_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_top"]
bg_color = Color(0.345098, 0.8, 0.00784314, 1)
corner_radius_bottom_left = 20
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bottom"]
bg_color = Color(0.12, 0.12, 0.12, 1)
border_width_top = 2
border_color = Color(0.2, 0.2, 0.2, 1)

[node name="MapMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="WaterBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11, 0.64, 0.93, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="PathContainer" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 13000)
layout_mode = 2
size_flags_horizontal = 3

[node name="Islands" type="Control" parent="ScrollContainer/PathContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PathLine" type="Line2D" parent="ScrollContainer/PathContainer"]
width = 20.0
default_color = Color(0.345098, 0.8, 0.00784314, 1)
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Island1" type="TextureRect" parent="ScrollContainer/PathContainer/Islands"]
layout_mode = 0
offset_top = 200.0
offset_right = 720.0
offset_bottom = 920.0
expand_mode = 1

[node name="Island2" type="TextureRect" parent="ScrollContainer/PathContainer/Islands"]
layout_mode = 0
offset_top = -1000.0
offset_right = 720.0
offset_bottom = -280.0
expand_mode = 1

[node name="TopBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_top")

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Hearts" type="HBoxContainer" parent="TopBar/HBox"]
layout_mode = 2

[node name="Icon" type="Label" parent="TopBar/HBox/Hearts"]
layout_mode = 2
text = "‚ù§Ô∏è"

[node name="Label" type="Label" parent="TopBar/HBox/Hearts"]
layout_mode = 2
text = "FULL 5"

[node name="Coins" type="HBoxContainer" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="Label" parent="TopBar/HBox/Coins"]
layout_mode = 2
text = "ü™ô"

[node name="Label" type="Label" parent="TopBar/HBox/Coins"]
layout_mode = 2
text = "2,100"

[node name="Gems" type="HBoxContainer" parent="TopBar/HBox"]
layout_mode = 2

[node name="Icon" type="Label" parent="TopBar/HBox/Gems"]
layout_mode = 2
text = "üíé"

[node name="Label" type="Label" parent="TopBar/HBox/Gems"]
layout_mode = 2
text = "60"

[node name="Achievements" type="Button" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 110.0
offset_right = -100.0
offset_bottom = 170.0
grow_horizontal = 0
text = "üèÜ"

[node name="Settings" type="Button" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 110.0
offset_right = -20.0
offset_bottom = 170.0
grow_horizontal = 0
text = "‚öôÔ∏è"

[node name="BottomBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bottom")

[node name="HBox" type="HBoxContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Tour" type="Button" parent="BottomBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "TOUR"
flat = true

[node name="Shop" type="Button" parent="BottomBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "SHOP"
flat = true
